--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   datasource:
     url: 'jdbc:mysql://localhost:3306/sodimac?useSSL=false&serverTimezone=UTC'
     username: 'root'
-    password: 'Yoselin!0709'
+    password: 'Q17f4r4qMP!'
     driver-class-name: 'com.mysql.cj.jdbc.Driver'
   jpa:
     show-sql: true
