--- a/pom.xml
+++ b/pom.xml
@@ -29,9 +29,12 @@
 	<properties>
 		<java.version>17</java.version>
 		<org.mapstruct.version>1.5.5.Final</org.mapstruct.version>
-		<sonar.projectKey>sodimac-v5</sonar.projectKey>
-		<sonar.host.url>http://localhost:9000</sonar.host.url>
-		<sonar.login>sqp_4108a190ec90b836eaaeacbdf1729b9b8afd5785</sonar.login>
+<!--		<sonar.projectKey>sodimac-v5</sonar.projectKey>-->
+<!--		<sonar.host.url>http://localhost:9000</sonar.host.url>-->
+<!--		<sonar.login>sqp_4108a190ec90b836eaaeacbdf1729b9b8afd5785</sonar.login>-->
+<!--		<sonar.login>sqp_7335c47744050044c8449e45fee761c11fb10956</sonar.login>-->
+<!--		<sonar.projectKey>sodimac-v2</sonar.projectKey>-->
+<!--		<sonar.host.url>http://localhost:9000</sonar.host.url>-->
 		<sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
 	</properties>
 	<dependencies>
