--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     url: 'jdbc:mysql://localhost:3306/sodimac?useSSL=false&serverTimezone=UTC'
     username: 'root'
     #password: 'Q17f4r4qMP!'
-    #password: 'Yoselin!0709'
+    password: 'Yoselin!0709'
     driver-class-name: 'com.mysql.cj.jdbc.Driver'
   jpa:
     show-sql: true
